tests/exploratory/errors/test_struct_method_not_found.sn
# Exploratory test: Calling a method that doesn't exist on a struct
# This should fail to compile because the method doesn't exist.

struct Counter =>
    value: int

    fn getValue(): int =>
        return self.value

fn main(): int =>
    var c: Counter = Counter { value: 42 }
    # Try to call a method that doesn't exist
    var x: int = c.nonExistentMethod()
    return 0
